Implement worker profile page
Implemented file upload functionality and form validation on the worker's profile page. Workers can now upload a photo and complete their personal and bank details. A worker can choose to complete the profile later and is redirected to the dashboard.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@tailwindcss/typography": "^0.5.12",
-        "gotham-fonts": "^1.0.3"
+        "gotham-fonts": "^1.0.3",
+        "sweetalert2": "^11.10.7"
     }
 }
