--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.3",
         "blade-ui-kit/blade-icons": "^1.6",
+        "codeat3/blade-uiw-icons": "^1.5",
         "danharrin/livewire-rate-limiting": "^1.3",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
