--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@tailwindcss/typography": "^0.5.12",
         "gotham-fonts": "^1.0.3",
+        "jquery": "^3.7.1",
         "sweetalert2": "^11.10.7"
     }
 }
