Implement worker create invoice page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@tailwindcss/typography": "^0.5.12",
         "flatpickr": "^4.6.13",
         "gotham-fonts": "^1.0.3",
+        "inputmask": "^5.0.8",
         "jquery": "^3.7.1",
         "sweetalert2": "^11.10.7"
     }
