--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "danharrin/livewire-rate-limiting": "^1.3",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^3.4",
         "maatwebsite/excel": "^3.1"
     },
